--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "start": "serve public"
   },
   "devDependencies": {
-    "html-minifier": "^4.0.0",
-    "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.0",
     "rollup": "^1.12.0",
     "rollup-plugin-execute": "^1.1.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-terser": "^7.0.2",
     "serve": "^11.3.2",
     "svelte": "^3.0.0"
   },
