--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "serve public"
+    "start": "serve dist"
   },
   "devDependencies": {
+    "node-sass": "^4.14.1",
     "rimraf": "^3.0.0",
     "rollup": "^1.12.0",
     "rollup-plugin-execute": "^1.1.1",
@@ -15,7 +16,8 @@
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^7.0.2",
     "serve": "^11.3.2",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "svelte-preprocess": "^4.5.1"
   },
   "author": "Fernando Garcia",
   "license": "MIT"
